third_party/move/move-compiler-v2/tests/checking/variants/bug_15073.exp

Diagnostics:
error: unbound module
  ┌─ tests/checking/variants/bug_15073.move:8:13
  │
8 │             ToolType::Http { uri } => {
  │             ^^^^^^^^ Unbound module or type alias 'ToolType'
